Fixes icons and adds vercel.json

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <link rel="manifest" href="/manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="apple-touch-icon" href="/icons/android/android-launchericon-192-192.png">
-  <link rel="apple-touch-icon" sizes="512x512" href="/icons/android/android-launchericon-512-512.png">
+  <link rel="apple-touch-icon" href="/icons/ios/192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="/icons/ios/512.png">
 </head>
 <body>
   <app-root></app-root>
